name:                False
version:             0.9
synopsis:            A FALSE interpreter library (shipped with minimal front-end)
-- description:         
license:             MIT
license-file:        LICENSE
author:              Lewin Bormann
maintainer:          lbo@spheniscida.de
-- copyright:           
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable false
  main-is:             FalseExec.hs
  build-depends:       base >=4.4, containers >=0.5, mtl >=2.1
